added salsakl logo and new favicon and also added mainurl for config file

--- a/source/index.html
+++ b/source/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+<a target="_blank" href="{{site.mainurl}}"><img src="/images/salsakl-logo.png" /></a>
 <div id="front-wrapper">
   <div id="hero">
     <div id="hero-inner" class="container">
